<resources>
    <string name="app_name">ByeBit</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_create_transaction">Create transaction</string>

    <!-- New strings for wallet creation -->
    <string name="title_create_wallet">Create New Wallet</string>
    <string name="hint_wallet_name">Wallet Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="button_create_wallet">Create Wallet</string>
    <string name="add_new_wallet">Add new wallet</string>

    <!-- ADD THIS STRING -->
    <string name="checkbox_show_private_key_input">Use existing wallet</string>
    <string name="hint_private_key">Private key</string>
    <string name="wallet_import_dialog_title">Import Wallets</string>
    <string name="export_wallets">Export Wallets</string>
    <string name="import_wallets_fab_desc">Import Wallets from ZIP</string>
    <string name="import_wallets_success_format">Import successful: %d wallet(s) added.</string>
    <string name="import_wallets_failed">Wallet import failed: %s</string>
    <string name="import_wallets_cancelled">Wallet import cancelled.</string>
    <string name="no_app_found_to_pick_file">No app found to pick the file.</string>
    <string name="details_button_text">Details</string>

    <!-- Sepolia RPC URL -->
    <string name="sepolia_rpc_url">"https://sepolia.drpc.org"</string>

    <!-- Strings for wallet deletion -->
    <string name="delete_wallet_dialog_title">Delete Wallet</string>
    <string name="delete_wallet_dialog_message">Are you sure you want to delete wallet \'%1$s\' (%2$s)?\nThis action cannot be undone.</string>
    <string name="delete_wallet_dialog_positive_button">Delete</string>
    <string name="delete_wallet_dialog_negative_button">Cancel</string>
    <string name="wallet_deleted_toast">Wallet deleted</string>
    <string name="wallet_deletion_failed_toast">Failed to delete wallet</string>

    <!-- New strings for Wallet Details Dialog and Password Prompt -->
    <string name="enter_password_for_wallet">Enter Password for %s</string>
    <string name="password_hint">Password</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="wallet_details_title">Details: %s</string>
    <string name="wallet_address_label">Address:</string>
    <string name="private_key_label">Private Key (Hex):</string>
    <string name="delete_wallet_button_details">Delete This Wallet</string>
    <string name="copy_private_key_button">Copy Key</string>
    <string name="close_button">Close</string>
    <string name="confirm_delete_wallet_title">Confirm Delete</string>
    <string name="confirm_delete_wallet_message">Permanently delete wallet \'%s\'?</string>
    <string name="delete_button_confirm">Delete</string>
    <string name="private_key_copied_toast">Private Key copied</string>
    <string name="failed_to_copy_private_key_toast">Failed to copy Private Key</string>
    <string name="wallet_deleted_toast_param">Wallet \'%s\' deleted.</string>
    <!-- Balance related strings, can be reused or added if not present -->
    <string name="balance_not_available">Balance: N/A</string>
    <string name="last_updated_format">Updated: %s</string>

    <string name="password_entry_cancelled">Password entry cancelled</string>

    <string name="biometric_unlock_fail_fallback">Biometric unlock failed, using fallback input</string>
    <string name="wallet_unlock_cancelled">Wallet unlock cancelled</string>
    <string name="wallet_details_title_format">Details: %s</string>

    <!-- Strings for WalletUnlockDialogFragment -->
    <string name="unlock_wallet_title">Unlock Wallet: %s</string>
    <string name="unlock_wallet_attempting_biometric">Attempting to unlock %s using biometrics…</string>
    <string name="unlock_wallet_enter_password">Enter password for %s</string>
    <string name="unlock_button">Unlock</string>

    <string name="wallet_unlock_cancelled_or_failed">Wallet unlock cancelled or failed.</string>
    <string name="wallet_unlock_error">An error occurred during wallet unlock.</string>

    <string name="checkbox_save_password">Save password for quick unlock</string>

    <string name="checking_root_status">Checking root status...</string>
    <string name="device_is_rooted_warning">Warning: Your device appears to be rooted. Some features might be disabled or behave unexpectedly for security reasons.</string>
    <string name="device_not_rooted">Device is not rooted.</string>
    <string name="error_checking_root">Could not determine root status.</string>
    <string name="root_check_title">Root Status Check</string>
    <string name="ok">OK</string>
    <string name="importing_wallets_message">Importing wallets...</string>
    <string name="import_wallets_title">Import wallets title</string>
    <string name="direction_icon">Direction Icon</string>
    <string name="send">Send</string>
    <string name="success">Success</string>
    <string name="create_transaction_from">From</string>
    <string name="create_transaction_to">To</string>
    <string name="create_transaction_amount">Amount</string>
    <string name="create_transaction_button">Send</string>
    <string name="create_transaction_sending">Sending transaction...</string>
    <string name="create_transaction_send_success">Successfully sent</string>
    <string name="create_transaction_send_failure">Couldn\'t send transaction</string>



    <string name="permission_description_sign_message">Permission to request signing</string>
    <string name="permission_label_sign_message">permission_label_sign_message</string>

</resources>
