<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.byebit.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.byebit.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <!-- Action to navigate to the create wallet fragment -->
        <action
            android:id="@+id/action_dashboard_to_createWalletFragment"
            app:destination="@id/navigation_create_wallet"
            /> <!-- Removed animation attributes -->
    </fragment>

    <fragment
        android:id="@+id/navigation_create_transaction"
        android:name="com.example.byebit.ui.createtransaction.CreateTransactionFragment"
        android:label="@string/title_create_transaction"
        tools:layout="@layout/fragment_create_transaction" />

    <!-- New fragment for creating a wallet -->
    <fragment
        android:id="@+id/navigation_create_wallet"
        android:name="com.example.byebit.ui.createwallet.CreateWalletFragment"
        android:label="@string/title_create_wallet"
        tools:layout="@layout/fragment_create_wallet" />

</navigation>
