<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.createtransaction.CreateTransactionFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_transaction_from"
        android:textColor="@android:color/primary_text_light"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/create_transaction_wallet_list"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:dropDownWidth="match_parent"
        android:spinnerMode="dialog"
        android:textAlignment="center" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_transaction_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_transaction_amount"
            android:inputType="number|numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_transaction_destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_transaction_to" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_create_transaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/create_transaction_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_recovery_phrase" />

</LinearLayout>